<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="edu.uw.jyinouye.assassin.LoginActivity">

    <!-- The ActionBar displayed at the top -->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/user_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:visibility="gone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirm_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_password_confirm"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:visibility="gone"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/toggle_sign_up"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/toggle_sign_up"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Choose your avatar"
                android:id="@+id/textView10"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:id="@+id/avator1"
                    android:src="@drawable/avator1"
                    android:layout_margin="5dp"
                    android:cropToPadding="false" />

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:id="@+id/avator2"
                    android:src="@drawable/avator2"
                    android:layout_margin="5dp"
                    android:cropToPadding="false" />

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:id="@+id/avator3"
                    android:src="@drawable/avator3"
                    android:layout_margin="5dp"
                    android:cropToPadding="false" />

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:id="@+id/avator4"
                    android:src="@drawable/avator4"
                    android:layout_margin="5dp"
                    android:cropToPadding="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:id="@+id/linearLayout"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true" >

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:id="@+id/avator5"
                    android:src="@drawable/avator5"
                    android:layout_margin="5dp"
                    android:cropToPadding="false" />

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:id="@+id/avator6"
                    android:src="@drawable/avator6"
                    android:layout_margin="5dp"
                    android:cropToPadding="false" />

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:id="@+id/avator7"
                    android:src="@drawable/avator7"
                    android:layout_margin="5dp"
                    android:cropToPadding="false" />

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:id="@+id/avator8"
                    android:src="@drawable/avator8"
                    android:layout_margin="5dp"
                    android:cropToPadding="false" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
